--- a/voyage/authentication/templates/authentication/about_us.html
+++ b/voyage/authentication/templates/authentication/about_us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Voyage-login</title>
+    <title>About us</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
     <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
    <style>
@@ -15,13 +15,13 @@ body{
     background-size: cover;
 }
 .login-box{
-    width: 300px;
+    width: 85vw;
     border-radius:10px;
     color:red;
     background-color:rgba(255,255,255,1);
     padding:0px 20px;
     position: absolute;
-    top: 50%;
+    top:60%;
     left: 50%;
     transform: translate(-50%,-50%);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -52,6 +52,16 @@ body{
 }
 .textbox input{
     border:none;
+    outline:none;
+    background: white;
+    font-size: 18px;
+    color:black;
+    width:250px;
+    float:left;
+    margin: 0 10px;
+}
+.textbox textarea{
+     border:none;
     outline:none;
     background: white;
     font-size: 18px;
@@ -155,28 +165,54 @@ border-radius:7px;
         <ul>
           <li><a href="{% url 'home' %}"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
           <li><a href="{% url 'auth-signup' %}"><i class="fa fa-user" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Signup</a></li>
-          <li><a href="{% url 'about-us'%}"><i class="fa fa-info" aria-hidden="true" style="padding-right:10px;"class="icon"></i>About</a></li>
+          <li><a href="{% url 'about-us' %}"><i class="fa fa-info" aria-hidden="true" style="padding-right:10px;"class="icon"></i>About</a></li>
           <li><a href="{% url 'Contact-us'%}"><i class="fa fa-phone" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Contact</a></li>
         </ul>
       </nav>
       <form method="POST">
        {%csrf_token%}
     <div class="login-box">
-        <h1><i class="fa fa-user" style="margin-right:10px;"></i>Login</h1>
-        <div class="textbox" >
-            <i class="fa fa-envelope" aria-hidden="true"></i>
-            <input type="text" placeholder="email" name="email" value="" autocomplete="off" required>
-        </div>
-        <div class="textbox">
-            <i class="fa fa-lock" aria-hidden="true"></i>
-            <input type="password" placeholder="password" name="password" value="" autocomplete="off" required>
-        </div>
-        <div class="loginbtn">
-           <input class="btn" type="submit" name="" value="Sign in">
-        </div>
-         
-           <a class='signup 'href="{% url 'auth-signup' %}"><p>Don't Have An Account?SignUp</p></a>
-           <a class='signup 'href="{% url 'forgot_password' %}"><p>Forgot password</p></a> 
+       <h1>About us</h1>
+       <h2 style="color:black;">The main objective of <strong>Pack your bags</strong> is to provide your customers with information and online booking of transport services. Transport services include bookings of flights and buses, customer will be able to select the date of travel, pickup point, drop point, and can also filter the fetched results by maximum and minimum price. Customers will be able to pay money from his/her wallet in which he/she can use money, update his/her profile and also change password. After booking, the booking details can be viewed in the website and can be downloaded from the same. Customers can also cancel their bookings and money will be refunded in to their wallet. There will be a group of administrators who can login and change the information in the database directly through the website.</h2>
+       <h1>People</h1>
+       <table style="margin-left: auto;margin-right: auto;">
+       <tr>
+       <td>
+       <i class="fa fa-user fa-5x" style="color:red;padding:0px 60px;" >
+       </td>
+        <td>
+        <i class="fa fa-user fa-5x" style="color:red;padding:0px 60px;"></i>
+       </td>
+        <td>
+        <i class="fa fa-user fa-5x" style="color:red;padding:0px 60px;"></i>
+       </td>
+        <td>
+        <i class="fa fa-user fa-5x" style="color:red;padding:0px 60px;"></i>
+       </td>
+        <td>
+        <i class="fa fa-user fa-5x" style="color:red;padding:0px 60px;"></i>
+       </td>
+       </tr>
+       <tr>
+       <td>
+       <h2 style="text-align:center;color:black;">Nitin</h2>
+       </td>
+        <td>
+        <h2 style="text-align:center;color:black;">Revanth</h2>
+       </td>
+        <td>
+         <h2 style="text-align:center;color:black;">Aakash</h2>
+       </td>
+        <td>
+          <h2 style="text-align:center;color:black;">Sai ram</h2>
+       </td>
+        <td>
+          <h2 style="text-align:center;color:black;">Abhiram</h2>
+       </td>
+       </tr>
+
+       </table>
+
     </div>
     </form>
      {% if messages %}
