--- a/voyage/authentication/templates/authentication/admin_flights.html
+++ b/voyage/authentication/templates/authentication/admin_flights.html
@@ -241,10 +241,10 @@ transform:scale(1.01);
     </div>
     <div id="navbar">
     <ul>
-      <li><a href="http://127.0.0.1:8000/admin/home" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
-      <li><a href="http://127.0.0.1:8000/admin/flights" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
-      <li><a href="http://127.0.0.1:8000/admin/buses" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Buses</a></li>
-      <li><a href="http://127.0.0.1:8000/admin/routes" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Routes</a></li>
+      <li><a href="http://127.0.0.1:8000/admin/home"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
+      <li><a href="http://127.0.0.1:8000/admin/flights" class="active"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
+      <li><a href="http://127.0.0.1:8000/admin/buses" ><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"></i>Buses</a></li>
+      <li><a href="http://127.0.0.1:8000/admin/routes" ><i class="fa fa-map-marker" aria-hidden="true" style="padding-right:10px;"></i>Routes</a></li>
       </ul>
       </div>
   </nav>
