--- a/voyage/authentication/templates/authentication/booking_details.html
+++ b/voyage/authentication/templates/authentication/booking_details.html
@@ -271,7 +271,7 @@ transform:scale(1.01);
 <h6>status:<strong>{{status}}</strong>
 </td>
 <td style="padding:5px 30px;width:10vw;">
-<h6>transactionId:<strong>{{transactionId}}
+<h6>bookingId:<strong>{{booking_Id}}
 </td>
 <td style="padding:5px 30px;width:40vw;">
 <h6>booked at:<strong>{{date_of_booking}}</strong></h6>
