--- a/voyage/authentication/templates/authentication/buses_search.html
+++ b/voyage/authentication/templates/authentication/buses_search.html
@@ -357,7 +357,7 @@ transform:scale(1.01);
 </td>
 <td style="padding:5px 30px;width:5vw;">
 <div class="loginbtn">
-             <input class="btn" type="submit" name="" value="Book" onclick="window.location.href='http://127.0.0.1:8000/buses/book/?c1={{bus.bus_schedule}}&c2={{passengers}}'">
+             <input class="btn" type="submit" name="" value="Book" onclick="window.location.href='http://127.0.0.1:8000/buses/seats/?c1={{bus.bus_schedule}}&c2={{passengers}}'">
         </div>
 </td>
 </tr>
