--- a/voyage/authentication/templates/authentication/flight_pdf.html
+++ b/voyage/authentication/templates/authentication/flight_pdf.html
@@ -26,7 +26,7 @@
  {% endcomment %}
 <br>
 
-<h1 style="text-align:center;">status:<strong>{{status}}</strong> &nbsp&nbsp  transactionId:<strong>{{transactionId}}</strong>  &nbsp&nbsp  booked at:<strong>{{date_of_booking}}</strong> &nbsp&nbsptotal passengers:<strong>{{no_of_passengers}}</strong>&nbsp&nbsp total price:<strong>{{total_price}}</strong></h1>
+<h1 style="text-align:center;">status:<strong>{{status}}</strong> &nbsp&nbsp  bookingId:<strong>{{booking_Id}}</strong>  &nbsp&nbsp  booked at:<strong>{{date_of_booking}}</strong> &nbsp&nbsptotal passengers:<strong>{{no_of_passengers}}</strong>&nbsp&nbsp total price:<strong>{{total_price}}</strong></h1>
 <br>
 
 {% comment %} <h6>transactionId:<strong>{{transactionId}}
@@ -63,7 +63,7 @@ p.no &nbsp&nbsp name &nbsp&nbsp age  &nbsp&nbsp gender  &nbsp&nbsp seat_no
 <hr>
 <h3 style="text-align:center;">Guidelines</h3>
 <ul>
-<li><h3>You should be atleast an hour early at the airport, and should be carrying your identity prrof such as AADHAR card, voter id or passport.</li>
+<li><h3>You should be atleast an hour early at the airport, and should be carrying your identity proof such as AADHAR card, voter id or passport.</li>
 <br>
 <li><h3>You must be carrying this ticket with you then only you will be given access in to the flight.</li>
 <br>
