--- a/voyage/authentication/templates/authentication/reset_password.html
+++ b/voyage/authentication/templates/authentication/reset_password.html
@@ -34,13 +34,13 @@
            <div class="form-group">
             <label class="col-md-3 control-label">New Password:</label>
             <div class="col-md-8">
-              <input class="form-control" type="password" value="" name="newpassword" required>
+              <input class="form-control" type="password" value="" name="newpassword" required minlength="8">
             </div>
           </div> 
            <div class="form-group">
             <label class="col-md-3 control-label">Confirm New password:</label>
             <div class="col-md-8">
-              <input class="form-control" type="password" value="" name="confirmpassword" required>
+              <input class="form-control" type="password" value="" name="confirmpassword" required minlength="8">
             </div>
           </div> 
           <div class="form-group">
