--- a/voyage/authentication/templates/authentication/changepassword.html
+++ b/voyage/authentication/templates/authentication/changepassword.html
@@ -34,19 +34,19 @@
           <div class="form-group">
             <label class="col-md-4 control-label"> Current password:</label>
             <div class="col-md-8">
-              <input class="form-control" type="password"  name="oldpassword" required>
+              <input class="form-control" type="password"  name="oldpassword" required minlength="8">
             </div>
           </div>
            <div class="form-group">
             <label class="col-md-3 control-label">New Password:</label>
             <div class="col-md-8">
-              <input class="form-control" type="password" value="" name="newpassword" required>
+              <input class="form-control" type="password" value="" name="newpassword" required minlength="8">
             </div>
           </div> 
            <div class="form-group">
             <label class="col-md-3 control-label">Confirm New password:</label>
             <div class="col-md-8">
-              <input class="form-control" type="password" value="" name="confirmpassword" required>
+              <input class="form-control" type="password" value="" name="confirmpassword" required minlength="8">
             </div>
           </div> 
           <div class="form-group">
