--- a/voyage/authentication/templates/authentication/flights.html
+++ b/voyage/authentication/templates/authentication/flights.html
@@ -18,7 +18,7 @@
   margin:0px;
   padding:0px;
   box-sizing:border-box;
-  font-family:'ABeeZee', sans-serif;
+  {% comment %} font-family:'ABeeZee', sans-serif; {% endcomment %}
 }
 body{
     background:url(https://images.unsplash.com/photo-1569629743817-70d8db6c323b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1974&q=80);
@@ -268,7 +268,7 @@ transform:scale(1.01);
 </div>
 <div id="part1">
 <div id="title" style="margin:auto;justify-content:center;">
-<h3 style="text-align:center;position:absolute;color:white;justify-content:center;">Book Domestic and international Flight tickets
+<h3 style="text-align:center;position:absolute;color:white;justify-content:center;font-family:'ABeeZee', sans-serif;">Book Domestic and international Flight tickets
 </div>
 <br>
 </div>
