--- a/voyage/authentication/templates/authentication/home.html
+++ b/voyage/authentication/templates/authentication/home.html
@@ -74,7 +74,7 @@ border-radius:7px;
 }
 #section1{
     width:100vw;
-    height:75vh;
+    height:100vh;
     background:url(https://media.cntraveler.com/photos/5e9471d05cd3cb0009ca9612/master/pass/FranceSummerTravel-2020-GettyImages-805553090.jpg);
     background-size:cover;
     background-position:center;
@@ -143,22 +143,23 @@ border-radius:7px;
       <li><a href="" class="active"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
       <li><a href="login"><i class="fa fa-user" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Login</a></li>
       <li><a href="signup"><i class="fa fa-user-plus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Signup</a></li>
-      <li><a href="#"><i class="fa fa-info" aria-hidden="true" style="padding-right:10px;"class="icon"></i>About</a></li>
-      <li><a href="#"><i class="fa fa-phone" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Contact</a></li>
+      <li><a href="aboutus"><i class="fa fa-info" aria-hidden="true" style="padding-right:10px;"class="icon"></i>About</a></li>
+      <li><a href="contactus"><i class="fa fa-phone" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Contact</a></li>
     </ul>
   </nav>
 </div>
 <div id="section1">
-  <div id="introduction" style="position:absolute;top:70px;background-color:rgba(0,0,0,0.4);padding:20px;width:100vw;height:65vh;">
-    <h5 style="text-align:center;color:white;font-family:serif; ">Looking to run away from stressful life?<br> Looking for some awesome holiday packages at great deals?<br> we got you covered<br> welcome to </h4>
-    <h3 style="text-align:center;color:white;font-family:'Inconsolata',serif;font-weight:bold;"><i class="fa fa-suitcase" style="color:red;margin-right:5px;"></i>PACK YOUR BAGS</h3>
-    <h4 style="text-align:center;color:white;font-family:serif;">Book flights,trains,buses and holiday packages<br> at affordable prices.</h4>
-    <h5 style="text-align:center;color:white;font-family:serif;">Signup now and join us today!!<br> We wish you a</h4>
-    <h4 style="text-align:center;color:white;font-family:serif;">Happy and safe journey</h4>
+  <div id="introduction" style="position:absolute;top:70px;background-color:rgba(0,0,0,0.4);padding:20px;width:100vw;height:90vh;">
+    <br><br><br>
+    <h3 style="text-align:center;color:white;font-family:serif; ">Looking to run away from stressful life?<br> Looking for some awesome holiday packages at great deals?<br> we got you covered<br> welcome to </h4>
+    <h1 style="text-align:center;color:white;font-family:'Inconsolata',serif;font-weight:bold;"><i class="fa fa-suitcase" style="color:red;margin-right:5px;"></i>PACK YOUR BAGS</h3>
+    <h2 style="text-align:center;color:white;font-family:serif;">Book flights and buses at affordable prices.</h4>
+    <h3 style="text-align:center;color:white;font-family:serif;">Signup now and join us today!!<br> We wish you a</h4>
+    <h2 style="text-align:center;color:white;font-family:serif;">Happy and safe journey</h4>
   </div>
 </div>
 <div>
-  <h4 style="text-align:center;font-family:'Raleway';font-weight:bold;padding:15px;">Popular Holiday packages</h4>
+  {% comment %} <h4 style="text-align:center;font-family:'Raleway';font-weight:bold;padding:15px;">Popular Holiday packages</h4>
 </div>
 <div class="wrap" style="text-align:center;position:absolute;display:flex;justify-content:center;width:100vw;">
   <ul id="lightSlider" style="text-align:center;position:absolute;display:flex;justify-content:center;width:100vw;">
@@ -286,6 +287,6 @@ border-radius:7px;
      </ul>
    </div> 
  </div>
-</div>
+</div> {% endcomment %}
 </body>
 </html>
