--- a/voyage/authentication/templates/authentication/flights_search.html
+++ b/voyage/authentication/templates/authentication/flights_search.html
@@ -239,7 +239,7 @@ transform:scale(1.01);
       <div class="item"><a   href="http://127.0.0.1:8000/profile" style="text-decoration:none;" ><i class="fa fa-user" style="padding-right:10px;color:red"></i>profile</a></div>
       <div class="item"><a  href="http://127.0.0.1:8000/changepassword" style="text-decoration:none;"><i class="fa fa-key" style="padding-right:10px;color:red"></i>change password</a></div>
       <div class="item"><a href="http://127.0.0.1:8000/mybookings" style="text-decoration:none;"><i class="fa fa-suitcase" style="padding-right:10px;color:red"></i>My bookings</a></div>
-      <div class="item" ><a  href="{% url 'auth-login' %}" style="text-decoration:none;"><i class="fa fa-sign-out" style="padding-right:10px;color:red"></i>log out</a></div>
+      <div class="item" ><a  href="{% url 'auth-login' %}" style="text-decoration:none;" onclick="return confirm('Do you really want to logout?');"><i class="fa fa-sign-out" style="padding-right:10px;color:red"></i>log out</a></div>
     </div>
   </div>
       </nav>
@@ -342,7 +342,7 @@ transform:scale(1.01);
 <td style="padding:5px 30px;width:6vw;">
 <h6>{{flight.company}}</h6>
 </td>
-<td style="padding:5px 30px;width:15vw;">
+<td style="padding:5px 30px;width:20vw;">
 <h6>{{flight.from_p}} - {{flight.to_p}}</h6>
 </td>
 
