--- a/voyage/authentication/templates/authentication/my_bookings.html
+++ b/voyage/authentication/templates/authentication/my_bookings.html
@@ -239,7 +239,7 @@ transform:scale(1.01);
       <div class="item"><a   href="http://127.0.0.1:8000/profile" style="text-decoration:none;" ><i class="fa fa-user" style="padding-right:10px;color:red"></i>profile</a></div>
       <div class="item"><a  href="http://127.0.0.1:8000/changepassword" style="text-decoration:none;"><i class="fa fa-key" style="padding-right:10px;color:red"></i>change password</a></div>
       <div class="item"><a href="http://127.0.0.1:8000/mybookings" style="text-decoration:none;"><i class="fa fa-suitcase" style="padding-right:10px;color:red"></i>My bookings</a></div>
-      <div class="item" ><a  href="{% url 'auth-login' %}" style="text-decoration:none;"><i class="fa fa-sign-out" style="padding-right:10px;color:red"></i>log out</a></div>
+      <div class="item" ><a  href="{% url 'auth-login' %}" style="text-decoration:none;" onclick="return confirm('Do you really want to logout?');"><i class="fa fa-sign-out" style="padding-right:10px;color:red"></i>log out</a></div>
     </div>
   </div>
       </nav>
@@ -249,7 +249,7 @@ transform:scale(1.01);
       <hr>
       <br><br>
 {% if bookings %}
-<table style="width:80vw;margin:auto;">
+<table style="width:90vw;margin:auto;">
 {% for booking in bookings%}
 <tr>
 <td>
@@ -262,10 +262,10 @@ transform:scale(1.01);
 <td style="padding:5px 30px;width:20vw;">
 <h6>{{booking.company}}</h6>
 </td>
-<td style="padding:5px 30px;width:20vw;">
+<td style="padding:5px 30px;width:30vw;">
 <h6>{{booking.from_p}} - {{booking.to_p}}</h6>
 </td>
-<td style="padding:5px 30px;width:55vw;">
+<td style="padding:5px 30px;width:60vw;">
 <h6>{{booking.date_from}} {{booking.time_from}} - {{booking.date_to}} {{booking.time_to}}</h6>
 </td>
 <td style="padding:5px 30px;width:20vw;">
@@ -276,7 +276,7 @@ transform:scale(1.01);
 <td style="padding:5px 30px;width:10vw;">
 <h6>status:<strong>{{booking.status}}</strong></h6>
 </td>
-<td style="padding:5px 30px;width:40vw;">
+<td style="padding:5px 30px;width:50vw;">
 <h6>booked at:<strong>{{booking.date_of_booking}}</strong></h6>
 </td>
 <td style="padding:5px 30px;width:15vw;">
