--- a/voyage/authentication/templates/authentication/home.html
+++ b/voyage/authentication/templates/authentication/home.html
@@ -151,7 +151,7 @@ border-radius:7px;
 <div id="section1">
   <div id="introduction" style="position:absolute;top:70px;background-color:rgba(0,0,0,0.4);padding:20px;width:100vw;height:90vh;">
     <br><br><br>
-    <h3 style="text-align:center;color:white;font-family:serif; ">Looking to run away from stressful life?<br> Looking for some awesome holiday packages at great deals?<br> we got you covered<br> welcome to </h4>
+    <h3 style="text-align:center;color:white;font-family:serif; "> Looking for some awesome travel at great deals?<br> we got you covered<br> welcome to </h4>
     <h1 style="text-align:center;color:white;font-family:'Inconsolata',serif;font-weight:bold;"><i class="fa fa-suitcase" style="color:red;margin-right:5px;"></i>PACK YOUR BAGS</h3>
     <h2 style="text-align:center;color:white;font-family:serif;">Book flights and buses at affordable prices.</h4>
     <h3 style="text-align:center;color:white;font-family:serif;">Signup now and join us today!!<br> We wish you a</h4>
