--- a/voyage/authentication/templates/authentication/profile.html
+++ b/voyage/authentication/templates/authentication/profile.html
@@ -88,7 +88,7 @@
           <div class="form-group">
             <label class="col-md-4 control-label"> Type Password to confirm:</label>
             <div class="col-md-8">
-              <input class="form-control" type="password"  name="password" required>
+              <input class="form-control" type="password"  name="password" required minlength="8">
             </div>
           </div>
           <div class="form-group">
