added add admin

--- a/voyage/authentication/templates/authentication/admin.html
+++ b/voyage/authentication/templates/authentication/admin.html
@@ -314,6 +314,20 @@ transform:scale(1.01);
         </tr>
         </table>
         </div>
+           <div class="flights" id="routes" style="background-color:white;border-radius:7px;margin:20px;padding:20px;">
+        <table>
+        <tr>
+        <td style="padding:5px 30px;width:6vw">
+        <i class="fa fa-user-plus fa-2x" style="padding:20px;"></i>
+        </td>
+        <td style="padding:5px 30px;width:20vw;">
+        <div class="loginbtn">
+                     <input class="btn" type="submit" name="" value="Add Admin" onclick="window.location.href='http://127.0.0.1:8000/admin/add'">
+                </div>
+        </td>
+        </tr>
+        </table>
+        </div>
     </div>
     </td>
     </tr>
