--- a/voyage/authentication/templates/authentication/admin_flights_details.html
+++ b/voyage/authentication/templates/authentication/admin_flights_details.html
@@ -223,7 +223,7 @@ transform:scale(1.01);
       {% comment %} <li><a href="#"><i class="fa fa-train" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Trains</a></li> {% endcomment %}
       <li><a href="http://127.0.0.1:8000/admin/buses"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li>
        <li><a href="http://127.0.0.1:8000/admin/routes"><i class="fa fa-map-marker" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Routes</a></li>
-
+        <li><a href="http://127.0.0.1:8000/admin/add"><i class="fa fa-user-plus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Add admin</a></li>
       </ul>
       </div>
   </nav>
