--- a/voyage/authentication/templates/authentication/admin_flights.html
+++ b/voyage/authentication/templates/authentication/admin_flights.html
@@ -245,6 +245,7 @@ transform:scale(1.01);
       <li><a href="http://127.0.0.1:8000/admin/flights" class="active"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
       <li><a href="http://127.0.0.1:8000/admin/buses" ><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"></i>Buses</a></li>
       <li><a href="http://127.0.0.1:8000/admin/routes" ><i class="fa fa-map-marker" aria-hidden="true" style="padding-right:10px;"></i>Routes</a></li>
+       <li><a href="http://127.0.0.1:8000/admin/add"><i class="fa fa-user-plus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Add admin</a></li>
       </ul>
       </div>
   </nav>
