--- a/voyage/authentication/templates/authentication/admin_buses_details.html
+++ b/voyage/authentication/templates/authentication/admin_buses_details.html
@@ -237,7 +237,7 @@ transform:scale(1.01);
  {%csrf_token%}
 <tr>
  <td>
- <input class="form-control" type="text" value="" name="Bus_id" placeholder="Bus ID" required >
+ <input class="form-control" type="number" value="" name="Bus_id" placeholder="Bus ID" required >
  </td>
  <td>
  <input class="form-control" type="text" value="" name="Bus_no" placeholder="Bus No" required >
