--- a/voyage/authentication/templates/authentication/admin_flights_details.html
+++ b/voyage/authentication/templates/authentication/admin_flights_details.html
@@ -237,7 +237,7 @@ transform:scale(1.01);
  {%csrf_token%}
 <tr>
  <td>
- <input class="form-control" type="text" value="" name="Flight_id" placeholder="Flight ID" required >
+ <input class="form-control" type="number" value="" name="Flight_id" placeholder="Flight ID" required >
  </td>
  <td>
  <input class="form-control" type="text" value="" name="Flight_no" placeholder="Flight No" required >
