--- a/voyage/authentication/templates/authentication/admin_buses_list.html
+++ b/voyage/authentication/templates/authentication/admin_buses_list.html
@@ -239,7 +239,7 @@ transform:scale(1.01);
  {%csrf_token%}
 <tr>
  <td>
- <input class="form-control" type="text" value="" name="Bus_id" placeholder="Bus ID" required >
+ <input class="form-control" type="number" value="" name="Bus_id" placeholder="Bus ID" required >
  </td>
 <td>
  <input class="form-control" type="text" value="" name="Bus_name" placeholder="Bus name" required >
